# sphinx_click_custom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  cli_custom.py  pyproject.toml
.github/workflows/: python-tests.yml
sphinx_click_custom/: ext.py
tests/: README.md  test_backspace_characters.py  test_directive_simple.py  test_edge_cases.py  test_formatting.py  test_integration_simple.py  test_runner.py
